Bug 373381: Rendering of radios/checkboxes with auto width has regressed. r+sr=roc.